[PHP Simple HTML Dom v4.8.x]
1:  refactor -> findOne() -> will now return always an "Blank" object if no element was found

[PHP Simple HTML Dom v4.7.x]
1: add "findMultiOrFalse()" + "findOneOrFalse()"
2: fix -> usage of e.g. "textContent"
3: fix -> usage of special js template tags in the dom
4: merge improvements from "ivopetkov/html5-dom-document-php -> length attribute
5: merge improvements from "ivopetkov/html5-dom-document-php -> classList support
6: add "nextNonWhitespaceSibling()"
7: fix -> usage of "outerhtml"
8: add support for "symfony/css-selector": ~5.0
9: fix -> "save()" -> will use html() insteadof of innerHtml() now
13: fix -> "val()" -> will now support hidden fields
14: fix -> keep html comments, also at the beginning of the html input
15: add "HtmlDomParser->overwriteTemplateLogicSyntaxInSpecialScriptTags()"
16: add support for "text/x-handlebars-template"
17: fix -> problem with auto-completion in e.g. PhpStorm
18: small optimizations + fix phpstan reported errors
19: add support for different special script-tags
20: fix -> invalid html (move html that is after "</html>" before "</html>")
21: fix -> internal invalid self-closing tags (e.g. <wbr>)
22: fix -> invalid html (remove content before "<!doctype.*>")
23: fix -> invalid html (remove content before "<!doctype.*>") + try to repair broken html
24: fix -> normalize the html after replacing the node
25: add support for PHP 8
26: fix -> fix "setAttribute()" -> for e.g. urls
27: fix -> "XmlDomParser" -> add option for "auto-remove-xpath-namespace"
28: fix -> allow CSS and xPath syntax for XmlDomParser
29: use github actions
30: add "previousNonWhitespaceSibling()"
31: add "SimpleHtmlDom->delete()" & "SimpleHtmlDom->getTag()" thanks @marioquartz
    add support for "symfony/css-selector": ~6.0 thanks @dora38


[PHP Simple HTML Dom v4.6.x]
1: add an XmlDomParser Class + simple tests
2: add support for text/x-custom-template type
3: fix -> check result of "html5FallbackForScriptTags()"

