@@ -1,5 +1,7 @@
 [PHP Simple HTML Dom v4.8.x]
-1:  refactor -> findOne() -> will now return always an "Blank" object if no element was found
+0: refactor -> findOne() -> will now return always an "Blank" object if no element was found
+1: "SimpleXmlDomNodeInterface" -> fix phpdocs only
+2: "*NodeBlank" -> fix return type from "findOne()"
 
 [PHP Simple HTML Dom v4.7.x]
 1: add "findMultiOrFalse()" + "findOneOrFalse()"
@@ -31,7 +33,6 @@
 30: add "previousNonWhitespaceSibling()"
 31: add "SimpleHtmlDom->delete()" & "SimpleHtmlDom->getTag()" thanks @marioquartz
     add support for "symfony/css-selector": ~6.0 thanks @dora38
-
 
 [PHP Simple HTML Dom v4.6.x]
 1: add an XmlDomParser Class + simple tests
